--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 <h1>WED</h1>
 <ol>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>JavaScript</li>
+  <li><a href="1.html">HTML</li>
+  <li><a href="2.html">CSS</li>
+  <li><a href="3.html">JavaScript</li>
 </ol>
 
 <h2>HTML</h2>
